tests/ui/extern/extern-empty-string-issue-140884.stderr
error[E0703]: invalid ABI: found ``
  --> $DIR/extern-empty-string-issue-140884.rs:1:8
   |
LL | extern "" {}
   |        ^^ invalid ABI
   |
   = note: invoke `rustc --print=calling-conventions` for a full list of supported calling conventions
help: there's a similarly named valid ABI `C`
   |
LL | extern "C" {}
   |         +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0703`.
