tests/ui/extern/extern-empty-string-issue-140884.rs
extern "" {} //~ ERROR invalid ABI: found ``

fn main() {}
